# ashwal

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: version.h.in
src/app/: cli.c  config.c  config.h  main.c
src/backends/: ashwal.c  backend.c  backend.h
src/modules/cache/: cache.c
src/modules/template/: template.c
src/modules/theme/: themes.c
templates/: colors-gtk.css  colors-gtk4.css  colors-mangowm.conf  colors-oomox  colors-qtct.conf  colors-wal-dwl.h  colors-zed.json
